@@ -1,5 +1,13 @@
 2011-11-08  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Support escaped commas in hostdisk.
+
+	* grub-core/kern/emu/hostdisk.c (unescape_cmp): New function.
+	(find_grub_drive): Use unescape_cmp.
+	(make_device_name): Escape commas.
+
+2011-11-08  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub.d/10_kfreebsd.in: Use ${grub_mkrelpath} not grub-mkrelpath.
 
 2011-11-08  Vladimir Serbinenko  <phcoder@gmail.com>
